Nosearch page added.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -215,3 +215,12 @@ header{
         
     }
 }
+
+.no-search{
+    padding-top: 0;
+    p{
+        font-size: 1.6rem;
+        font-weight: 300;
+        opacity: .7;
+    }
+}
